force-app/main/default/objects/PF_Test_Case_Step__c/PF_Test_Case_Step__c.object-meta.xml
<CustomObject>
    <description>This is where project test case steps will be captured within the ProjectForce application.</description>
    <label>Test Case Step</label>
    <nameField>
        <label>Test Case Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>