force-app/main/default/objects/PF_Test_Case_Step__c/fields/PF_Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_Result__c</fullName>
    <inlineHelpText>Provide the Actual result which came when Test case was executed.</inlineHelpText>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>