force-app/main/default/objects/PF_Test_Case_Step__c/fields/PF_Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>PF_Expected_Result__c</fullName>
    <inlineHelpText>Provide the Expected result which is expected out of Test case run.</inlineHelpText>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>