force-app/main/default/objects/PF_Test_Case_Step__c/fields/PF_Step_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Step_Description__c</fullName>
    <inlineHelpText>Provide the Test case description</inlineHelpText>
    <label>Step Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>