force-app/main/default/objects/PF_Test_Case_Step__c/fields/PF_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>PF_Test_Case__c</fullName>
    <inlineHelpText>Select Test case against which this Test case step is written.</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>PF_TestCases__c</referenceTo>
    <relationshipLabel>Test Case Steps</relationshipLabel>
    <relationshipName>Test_Case_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>