force-app/main/default/objects/PF_Test_Case_Step__c/recordTypes/PF_Test_Case_Step.recordType-meta.xml
<RecordType>
    <fullName>PF_Test_Case_Step</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Test Case Step</label>
</RecordType>